# rocket-firebase-auth

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/react-rocket-example/: .gitignore  Cargo.toml  README.md
examples/react-rocket-example/server/: .env.example  Cargo.toml  firebase-certs.example.json  rustfmt.toml
examples/react-rocket-example/server/src/: api.rs  main.rs
examples/react-rocket-example/web/: .env.example  index.html  package.json  pnpm-lock.yaml
examples/react-rocket-example/web/src/: App.tsx  env.d.ts  main.tsx
examples/simple-protected-endpoint/: main.rs
src/: auth.rs  bearer_token.rs  errors.rs  firebase_auth.rs  firebase_token.rs  jwk.rs  jwt.rs  lib.rs  rocket.rs
src/plugins/: mod.rs  rocket.rs
tests/: main.rs  scenarios.toml  test_firebase_auth.rs  test_jwt.rs  test_readme.rs
tests/common/: macros.rs  mod.rs  utils.rs
tests/env_files/: .env.test  firebase-creds.json
tests/scenario_testing/: main.rs  test_jwt.rs  utils.rs
