[package]
name = "rocket_firebase_auth"
version = "0.1.1"
edition = "2021"

description = "Encode/Decode firebase tokens in rocket apps"
authors = ["Haruki Jay Shimada <peaske16180@gmail.com>"]
repository = "https://github.com/DrPoppyseed/rocket-firebase-auth"

license = "MIT"
readme = "README.md"
keywords = ["firebase", "rocket", "jsonwebtokens"]

include = [
    "src/*",
    "./Cargo.toml",
    "./LICENSE",
    "./README.md"
]

[lib]
path = "src/lib.rs"

[features]
default = []
env = ["dep:dotenvy", "dep:serde_json"]
encode = ["dep:chrono"]

[dependencies]
jsonwebtoken = { version = "8.1.1", features = ["use_pem"] }
futures = "0.3.21"
serde = { version = "1.0.138" }
reqwest = { version = "0.11.11", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }

dotenvy = { version = "0.15.6", optional = true }
serde_json = { version = "1.0.87", optional = true }

chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
wiremock = "0.5.14"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
once_cell = "1.15.0"