[package]
name = "rocket_firebase_auth"
version = "0.3.0"
edition = "2021"

description = "Encode/decode firebase tokens in rocket apps with ease"
authors = ["Haruki Jay Shimada <peaske16180@gmail.com>"]
repository = "https://github.com/DrPoppyseed/rocket-firebase-auth"

license = "MIT"
readme = "README.md"
keywords = ["firebase", "rocket", "jsonwebtokens", "auth", "firebase-auth"]

include = [
    "src/*",
    "./Cargo.toml",
    "./LICENSE",
    "./README.md"
]

[lib]
path = "src/lib.rs"

[features]
default = ["env"]

## Enables support for reading in the Firebase Credentials from dotenv
## and non-dotenv files.
env = ["dep:dotenvy", "dep:serde_json"]

## Enables support for encoding tokens on the backend
encode = ["dep:chrono"]

[dependencies]
jsonwebtoken = { version = "8.2.0", features = ["use_pem"] }
serde = { version = "1.0.152" }
reqwest = { version = "0.11.14", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }

dotenvy = { version = "0.15.6", optional = true }
serde_json = { version = "1.0.91", optional = true }

chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
wiremock = "0.5.17"
tokio = { version = "1.24.2", features = ["full"] }
toml = "0.5.11"
once_cell = "1.17.0"
