[package]
name = "rocket_firebase_auth"
version = "0.4.0"
edition = "2021"

description = "Encode/decode firebase tokens in rocket apps with ease"
authors = ["Haruki Jay Shimada <peaske16180@gmail.com>"]
repository = "https://github.com/DrPoppyseed/rocket-firebase-auth"

license = "MIT"
readme = "README.md"
keywords = ["firebase", "rocket", "jsonwebtokens", "auth", "firebase-auth"]

include = ["src/*", "./Cargo.toml", "./LICENSE", "./README.md"]

[lib]
path = "src/lib.rs"

[features]
default = ["env", "rocket"]

## Enables support for reading in the Firebase Credentials from dotenv
## and non-dotenv files.
env = ["dep:dotenvy", "dep:serde_json"]

## Enables support for encoding tokens on the backend
encode = ["dep:chrono"]

## Enables support for the implementation of the FromRequest trait in Rocket
rocket = ["dep:rocket"]

[dependencies]
jsonwebtoken = { version = "8.3", features = ["use_pem"] }
serde = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }

rocket = { version = "0.5.0-rc.3", features = ["json"], optional = true }
dotenvy = { version = "0.15", optional = true }
serde_json = { version = "1.0", optional = true }

chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
once_cell = "1"
test-case = "3"
