[package]
name = "server"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rocket = { version = "0.5.0", features = ["json"] }
rocket_firebase_auth = { git = "https://github.com/DrPoppyseed/rocket-firebase-auth.git" }
rocket_cors = "0.6.0"
